--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,4 @@
-generate.py filter=lfs diff=lfs merge=lfs -text
-mnt filter=lfs diff=lfs merge=lfs -text
-README.md filter=lfs diff=lfs merge=lfs -text
-requirements.txt filter=lfs diff=lfs merge=lfs -text
-train.json filter=lfs diff=lfs merge=lfs -text
-train.py filter=lfs diff=lfs merge=lfs -text
 data filter=lfs diff=lfs merge=lfs -text
 config filter=lfs diff=lfs merge=lfs -text
 cache filter=lfs diff=lfs merge=lfs -text
+model/final_model/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
